[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Pantry_api-testing"
version = "0.1.0"
description = "PantryAPI Testing Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "pytest-html>=4.1.1",
    "requests>=2.32.5",
    "locust>=2.39.1",
]

[tool.setuptools.packages.find]
# This tells setuptools to ONLY treat 'api_call' as a package
include = ["api_call*"]
# Explicitly ignore these folders so they aren't mistaken for code
exclude = ["tests*", "reports*", "assets*"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--html=report.html","-v"]
